2022-11-07T16:07:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3412004940 # 1007
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 138 653 / 146 682
* notice: next accum: outdated-unq outdated-all / unq all: 138 653 / 149 685
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2022-11-07]

2022-11-04T00:38:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3390365508 # 996
* notice: last 14d: unq all: 8 29
* notice: prev accum: outdated-unq outdated-all / unq all: 138 653 / 145 677
* notice: next accum: outdated-unq outdated-all / unq all: 138 653 / 146 682
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
* notice: removed / changed dates: [] / [2022-11-03]

2022-11-01T16:08:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3370938720 # 989
* notice: last 14d: unq all: 7 24
* notice: prev accum: outdated-unq outdated-all / unq all: 138 653 / 144 667
* notice: next accum: outdated-unq outdated-all / unq all: 138 653 / 145 677
* notice: prev exec diff / last date diff / accum: unq all: +1 +10 -0 -0 / +1 +10 -0 -0 / 1 10
* notice: removed / changed dates: [] / [2022-11-01]

2022-11-01T08:09:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3367843168 # 988
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 137 652 / 144 667
* notice: next accum: outdated-unq outdated-all / unq all: 138 653 / 144 667
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-18] / []

2022-10-31T08:10:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3359623348 # 985
* notice: last 14d: unq all: 7 15