@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-11-07T16:07:54Z",
+  "timestamp" : "2022-11-08T00:33:03Z",
   "count_outdated" : 653,
   "uniques_outdated" : 138,
-  "count" : 685,
-  "uniques" : 149,
+  "count" : 684,
+  "uniques" : 148,
   "views" : [
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
