@@ -1,11 +1,11 @@
 {
-  "count": 32,
-  "uniques": 11,
+  "count": 31,
+  "uniques": 10,
   "views": [
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-10-26T00:00:00Z",
